Add src and third_party to CubeIDE build path

--- a/cansw_altimeter.ioc
+++ b/cansw_altimeter.ioc
@@ -4,6 +4,10 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
+FDCAN1.CalculateBaudRateNominal=2687500
+FDCAN1.CalculateTimeBitNominal=372
+FDCAN1.CalculateTimeQuantumNominal=124.03100775193798
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
@@ -14,26 +18,29 @@ Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=FATFS
-Mcu.IP2=FREERTOS
-Mcu.IP3=MEMORYMAP
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SDMMC1
-Mcu.IP7=SYS
-Mcu.IPNb=8
+Mcu.IP2=FDCAN1
+Mcu.IP3=FREERTOS
+Mcu.IP4=MEMORYMAP
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SDMMC1
+Mcu.IP8=SYS
+Mcu.IPNb=9
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC8
 Mcu.Pin1=PC9
-Mcu.Pin2=PC10
-Mcu.Pin3=PC11
-Mcu.Pin4=PC12
-Mcu.Pin5=PD2
-Mcu.Pin6=VP_FATFS_VS_SDIO
-Mcu.Pin7=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=10
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin2=PA11
+Mcu.Pin3=PA12
+Mcu.Pin4=PC10
+Mcu.Pin5=PC11
+Mcu.Pin6=PC12
+Mcu.Pin7=PD2
+Mcu.Pin8=VP_FATFS_VS_SDIO
+Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V2
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
@@ -53,6 +60,10 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA11.Mode=FDCAN_Activate
+PA11.Signal=FDCAN1_RX
+PA12.Mode=FDCAN_Activate
+PA12.Signal=FDCAN1_TX
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDMMC1_D2
 PC11.Mode=SD_4_bits_Wide_bus
@@ -96,7 +107,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
