--- a/cansw_altimeter.ioc
+++ b/cansw_altimeter.ioc
@@ -1,4 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -11,36 +18,56 @@ FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,Calculat
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
 Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=FATFS
-Mcu.IP2=FDCAN1
-Mcu.IP3=FREERTOS
-Mcu.IP4=MEMORYMAP
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SDMMC1
-Mcu.IP8=SYS
-Mcu.IPNb=9
+Mcu.IP0=ADC3
+Mcu.IP1=CORTEX_M7
+Mcu.IP10=SYS
+Mcu.IP11=UART4
+Mcu.IP2=FATFS
+Mcu.IP3=FDCAN1
+Mcu.IP4=FREERTOS
+Mcu.IP5=I2C1
+Mcu.IP6=MEMORYMAP
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SDMMC1
+Mcu.IPNb=12
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
-Mcu.Pin0=PC8
-Mcu.Pin1=PC9
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=PC10
-Mcu.Pin5=PC11
-Mcu.Pin6=PC12
-Mcu.Pin7=PD2
-Mcu.Pin8=VP_FATFS_VS_SDIO
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V2
-Mcu.PinsNb=12
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PC8
+Mcu.Pin11=PC9
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PC10
+Mcu.Pin15=PC11
+Mcu.Pin16=PC12
+Mcu.Pin17=PD0
+Mcu.Pin18=PD1
+Mcu.Pin19=PD2
+Mcu.Pin2=PE4
+Mcu.Pin20=PD3
+Mcu.Pin21=PD4
+Mcu.Pin22=PB6
+Mcu.Pin23=PB7
+Mcu.Pin24=VP_FATFS_VS_SDIO
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin3=PH0-OSC_IN (PH0)
+Mcu.Pin4=PH1-OSC_OUT (PH1)
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2_C
+Mcu.Pin8=PE9
+Mcu.Pin9=PE10
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
@@ -64,18 +91,74 @@ PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
 PA12.Signal=FDCAN1_TX
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=ISENSE_GPS
+PC0.Signal=ADCx_INP10
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=ISENSE_CHG
+PC1.Signal=ADCx_INP11
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDMMC1_D2
 PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDMMC1_D3
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDMMC1_CK
+PC2_C.GPIOParameters=GPIO_Label
+PC2_C.GPIO_Label=ISENSE_3V3
+PC2_C.Mode=IN0-Single-Ended
+PC2_C.Signal=ADC3_INP0
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDMMC1_D0
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.Signal=SDMMC1_D1
+PD0.Locked=true
+PD0.Mode=Asynchronous
+PD0.Signal=UART4_RX
+PD1.Locked=true
+PD1.Mode=Asynchronous
+PD1.Signal=UART4_TX
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDMMC1_CMD
+PD3.GPIOParameters=GPIO_Label
+PD3.GPIO_Label=GPS_RESET
+PD3.Locked=true
+PD3.Signal=GPIO_Output
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=GPS_POS_VALID
+PD4.Locked=true
+PD4.Signal=GPIO_Input
+PE10.GPIOParameters=GPIO_Label
+PE10.GPIO_Label=FIRE2_N
+PE10.Locked=true
+PE10.Signal=GPIO_Output
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=LED_ERR
+PE2.Locked=true
+PE2.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=LED_ARM
+PE3.Locked=true
+PE3.Signal=GPIO_Output
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=LED_HEARTBEAT
+PE4.Locked=true
+PE4.Signal=GPIO_Output
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=FIRE2_P
+PE9.Locked=true
+PE9.Signal=GPIO_Output
+PH0-OSC_IN\ (PH0).GPIOParameters=GPIO_Label
+PH0-OSC_IN\ (PH0).GPIO_Label=FIRE1_P
+PH0-OSC_IN\ (PH0).Locked=true
+PH0-OSC_IN\ (PH0).Signal=GPIO_Output
+PH1-OSC_OUT\ (PH1).GPIOParameters=GPIO_Label
+PH1-OSC_OUT\ (PH1).GPIO_Label=FIRE1_N
+PH1-OSC_OUT\ (PH1).Locked=true
+PH1-OSC_OUT\ (PH1).Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -107,7 +190,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
@@ -174,6 +257,10 @@ RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=2000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
+SH.ADCx_INP10.0=ADC3_INP10,IN10-Single-Ended
+SH.ADCx_INP10.ConfNb=1
+SH.ADCx_INP11.0=ADC3_INP11,IN11-Single-Ended
+SH.ADCx_INP11.ConfNb=1
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -183,4 +270,5 @@ VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
+rtos.0.ip=FREERTOS
 isbadioc=false
