--- a/cansw_altimeter.ioc
+++ b/cansw_altimeter.ioc
@@ -11,14 +11,17 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-FDCAN1.CalculateBaudRateNominal=2687500
-FDCAN1.CalculateTimeBitNominal=372
-FDCAN1.CalculateTimeQuantumNominal=124.03100775193798
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
+FDCAN1.CalculateBaudRateNominal=250000
+FDCAN1.CalculateTimeBitNominal=4000
+FDCAN1.CalculateTimeQuantumNominal=1333.3333333333333
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler
+FDCAN1.NominalPrescaler=64
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Timing
+I2C1.Timing=0x00707CBB
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -28,6 +31,7 @@ Mcu.IP0=ADC3
 Mcu.IP1=CORTEX_M7
 Mcu.IP10=SYS
 Mcu.IP11=UART4
+Mcu.IP12=VREFBUF
 Mcu.IP2=FATFS
 Mcu.IP3=FDCAN1
 Mcu.IP4=FREERTOS
@@ -36,38 +40,39 @@ Mcu.IP6=MEMORYMAP
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SDMMC1
-Mcu.IPNb=12
+Mcu.IPNb=13
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PC8
-Mcu.Pin11=PC9
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PC10
-Mcu.Pin15=PC11
-Mcu.Pin16=PC12
-Mcu.Pin17=PD0
-Mcu.Pin18=PD1
-Mcu.Pin19=PD2
+Mcu.Pin10=PE10
+Mcu.Pin11=PC8
+Mcu.Pin12=PC9
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PC10
+Mcu.Pin16=PC11
+Mcu.Pin17=PC12
+Mcu.Pin18=PD0
+Mcu.Pin19=PD1
 Mcu.Pin2=PE4
-Mcu.Pin20=PD3
-Mcu.Pin21=PD4
-Mcu.Pin22=PB6
-Mcu.Pin23=PB7
-Mcu.Pin24=VP_FATFS_VS_SDIO
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=PD2
+Mcu.Pin21=PD3
+Mcu.Pin22=PD4
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=VP_FATFS_VS_SDIO
+Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
-Mcu.Pin8=PE9
-Mcu.Pin9=PE10
-Mcu.PinsNb=28
+Mcu.Pin8=VREF+
+Mcu.Pin9=PE9
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
@@ -190,11 +195,11 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=129000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC3_Init-ADC3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_VREFBUF_Init-VREFBUF-false-HAL-true
+RCC.ADCFreq_Value=80000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
-RCC.APB1Freq_Value=64000000
+RCC.APB1Freq_Value=32000000
 RCC.APB2Freq_Value=64000000
 RCC.APB3Freq_Value=64000000
 RCC.APB4Freq_Value=64000000
@@ -204,59 +209,71 @@ RCC.CKPERFreq_Value=64000000
 RCC.CortexFreq_Value=64000000
 RCC.CpuClockFreq_Value=64000000
 RCC.D1CPREFreq_Value=64000000
-RCC.DFSDMACLkFreq_Value=129000000
+RCC.D2PPRE1=RCC_APB1_DIV2
+RCC.DFSDMACLkFreq_Value=48000000
 RCC.DFSDMFreq_Value=64000000
-RCC.DIVP1Freq_Value=129000000
-RCC.DIVP2Freq_Value=129000000
-RCC.DIVP3Freq_Value=129000000
-RCC.DIVQ1Freq_Value=129000000
-RCC.DIVQ2Freq_Value=129000000
-RCC.DIVQ3Freq_Value=129000000
-RCC.DIVR1Freq_Value=129000000
-RCC.DIVR2Freq_Value=129000000
-RCC.DIVR3Freq_Value=129000000
-RCC.FDCANFreq_Value=129000000
+RCC.DIVM1=4
+RCC.DIVM2=4
+RCC.DIVM3=4
+RCC.DIVN1=12
+RCC.DIVN2=10
+RCC.DIVN3=9
+RCC.DIVP1Freq_Value=96000000
+RCC.DIVP2Freq_Value=80000000
+RCC.DIVP3Freq_Value=72000000
+RCC.DIVQ1=4
+RCC.DIVQ1Freq_Value=48000000
+RCC.DIVQ2=3
+RCC.DIVQ2Freq_Value=53333333.333333336
+RCC.DIVQ3Freq_Value=72000000
+RCC.DIVR1Freq_Value=96000000
+RCC.DIVR2Freq_Value=80000000
+RCC.DIVR3Freq_Value=72000000
+RCC.FDCANFreq_Value=48000000
 RCC.FMCFreq_Value=64000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=64000000
 RCC.HCLKFreq_Value=64000000
 RCC.HRTIMFreq_Value=64000000
-RCC.I2C123Freq_Value=64000000
+RCC.I2C123Freq_Value=32000000
 RCC.I2C4Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=64000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE1,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=64000000
 RCC.LPTIM345Freq_Value=64000000
 RCC.LPUART1Freq_Value=64000000
-RCC.LTDCFreq_Value=129000000
+RCC.LTDCFreq_Value=72000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=64000000
+RCC.PLL2FRACN=0
+RCC.PLL3FRACN=0
+RCC.PLLFRACN=0
 RCC.QSPIFreq_Value=64000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=129000000
-RCC.SAI23Freq_Value=129000000
-RCC.SAI4AFreq_Value=129000000
-RCC.SAI4BFreq_Value=129000000
-RCC.SDMMCFreq_Value=129000000
-RCC.SPDIFRXFreq_Value=129000000
-RCC.SPI123Freq_Value=129000000
+RCC.SAI1Freq_Value=48000000
+RCC.SAI23Freq_Value=48000000
+RCC.SAI4AFreq_Value=48000000
+RCC.SAI4BFreq_Value=48000000
+RCC.SDMMCFreq_Value=48000000
+RCC.SPDIFRXFreq_Value=48000000
+RCC.SPI123Freq_Value=48000000
 RCC.SPI45Freq_Value=64000000
 RCC.SPI6Freq_Value=64000000
-RCC.SWPMI1Freq_Value=64000000
+RCC.SWPMI1Freq_Value=32000000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.Tim1OutputFreq_Value=64000000
 RCC.Tim2OutputFreq_Value=64000000
 RCC.TraceFreq_Value=64000000
 RCC.USART16Freq_Value=64000000
-RCC.USART234578Freq_Value=64000000
-RCC.USBFreq_Value=129000000
-RCC.VCO1OutputFreq_Value=258000000
-RCC.VCO2OutputFreq_Value=258000000
-RCC.VCO3OutputFreq_Value=258000000
-RCC.VCOInput1Freq_Value=2000000
-RCC.VCOInput2Freq_Value=2000000
-RCC.VCOInput3Freq_Value=2000000
+RCC.USART234578Freq_Value=32000000
+RCC.USBFreq_Value=48000000
+RCC.VCO1OutputFreq_Value=192000000
+RCC.VCO2OutputFreq_Value=160000000
+RCC.VCO3OutputFreq_Value=144000000
+RCC.VCOInput1Freq_Value=16000000
+RCC.VCOInput2Freq_Value=16000000
+RCC.VCOInput3Freq_Value=16000000
 SH.ADCx_INP10.0=ADC3_INP10,IN10-Single-Ended
 SH.ADCx_INP10.ConfNb=1
 SH.ADCx_INP11.0=ADC3_INP11,IN11-Single-Ended
@@ -269,6 +286,8 @@ VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VREF+.Mode=InternalMode
+VREF+.Signal=VREFBUF_OUT
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
