Add pyro voltage and current sense pins

--- a/cansw_altimeter.ioc
+++ b/cansw_altimeter.ioc
@@ -1,4 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.master=1
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
 ADC3.NbrOfConversionFlag=1
@@ -27,52 +35,62 @@ MMTAppRegionsCount=0
 MMTConfigApplied=false
 Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
-Mcu.IP0=ADC3
-Mcu.IP1=CORTEX_M7
-Mcu.IP10=SYS
-Mcu.IP11=UART4
-Mcu.IP12=VREFBUF
-Mcu.IP2=FATFS
-Mcu.IP3=FDCAN1
-Mcu.IP4=FREERTOS
-Mcu.IP5=I2C1
-Mcu.IP6=MEMORYMAP
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SDMMC1
-Mcu.IPNb=13
+Mcu.IP0=ADC1
+Mcu.IP1=ADC3
+Mcu.IP10=SDMMC1
+Mcu.IP11=SYS
+Mcu.IP12=UART4
+Mcu.IP13=VREFBUF
+Mcu.IP2=CORTEX_M7
+Mcu.IP3=FATFS
+Mcu.IP4=FDCAN1
+Mcu.IP5=FREERTOS
+Mcu.IP6=I2C1
+Mcu.IP7=MEMORYMAP
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=14
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PE10
-Mcu.Pin11=PC8
-Mcu.Pin12=PC9
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PC12
-Mcu.Pin18=PD0
-Mcu.Pin19=PD1
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PE9
+Mcu.Pin19=PE10
 Mcu.Pin2=PE4
-Mcu.Pin20=PD2
-Mcu.Pin21=PD3
-Mcu.Pin22=PD4
-Mcu.Pin23=PB6
-Mcu.Pin24=PB7
-Mcu.Pin25=VP_FATFS_VS_SDIO
-Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=PC8
+Mcu.Pin21=PC9
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PC12
+Mcu.Pin27=PD0
+Mcu.Pin28=PD1
+Mcu.Pin29=PD2
 Mcu.Pin3=PH0-OSC_IN (PH0)
+Mcu.Pin30=PD3
+Mcu.Pin31=PD4
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=VP_FATFS_VS_SDIO
+Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
 Mcu.Pin8=VREF+
-Mcu.Pin9=PE9
-Mcu.PinsNb=29
+Mcu.Pin9=PA0
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
@@ -92,10 +110,39 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=ISENSE_BATT
+PA0.Mode=IN16-Single-Ended
+PA0.Signal=ADC1_INP16
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=PYRO1_CURR
+PA1.Mode=IN17-Single-Ended
+PA1.Signal=ADC1_INP17
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
 PA12.Signal=FDCAN1_TX
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=PYRO1_DIAG
+PA2.Signal=ADCx_INP14
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=PYRO1_VOLT
+PA3.Signal=ADCx_INP15
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=PYRO2_CURR
+PA4.Signal=ADCx_INP18
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=PYRO2_DIAG
+PA5.Signal=ADCx_INP19
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=PYRO2_VOLT
+PA6.Signal=ADCx_INP3
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=VSENSE_MAG
+PB0.Signal=ADCx_INP9
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=VSENSE_BATT
+PB1.Signal=ADCx_INP5
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -120,21 +167,17 @@ PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDMMC1_D0
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.Signal=SDMMC1_D1
-PD0.Locked=true
 PD0.Mode=Asynchronous
 PD0.Signal=UART4_RX
-PD1.Locked=true
 PD1.Mode=Asynchronous
 PD1.Signal=UART4_TX
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDMMC1_CMD
 PD3.GPIOParameters=GPIO_Label
 PD3.GPIO_Label=GPS_RESET
-PD3.Locked=true
 PD3.Signal=GPIO_Output
 PD4.GPIOParameters=GPIO_Label
 PD4.GPIO_Label=GPS_POS_VALID
-PD4.Locked=true
 PD4.Signal=GPIO_Input
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=FIRE2_N
@@ -142,15 +185,12 @@ PE10.Locked=true
 PE10.Signal=GPIO_Output
 PE2.GPIOParameters=GPIO_Label
 PE2.GPIO_Label=LED_ERR
-PE2.Locked=true
 PE2.Signal=GPIO_Output
 PE3.GPIOParameters=GPIO_Label
 PE3.GPIO_Label=LED_ARM
-PE3.Locked=true
 PE3.Signal=GPIO_Output
 PE4.GPIOParameters=GPIO_Label
 PE4.GPIO_Label=LED_HEARTBEAT
-PE4.Locked=true
 PE4.Signal=GPIO_Output
 PE9.GPIOParameters=GPIO_Label
 PE9.GPIO_Label=FIRE2_P
@@ -158,11 +198,9 @@ PE9.Locked=true
 PE9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).GPIOParameters=GPIO_Label
 PH0-OSC_IN\ (PH0).GPIO_Label=FIRE1_P
-PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Signal=GPIO_Output
 PH1-OSC_OUT\ (PH1).GPIOParameters=GPIO_Label
 PH1-OSC_OUT\ (PH1).GPIO_Label=FIRE1_N
-PH1-OSC_OUT\ (PH1).Locked=true
 PH1-OSC_OUT\ (PH1).Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -195,7 +233,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC3_Init-ADC3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_VREFBUF_Init-VREFBUF-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC3_Init-ADC3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_VREFBUF_Init-VREFBUF-false-HAL-true
 RCC.ADCFreq_Value=80000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
@@ -278,6 +316,20 @@ SH.ADCx_INP10.0=ADC3_INP10,IN10-Single-Ended
 SH.ADCx_INP10.ConfNb=1
 SH.ADCx_INP11.0=ADC3_INP11,IN11-Single-Ended
 SH.ADCx_INP11.ConfNb=1
+SH.ADCx_INP14.0=ADC1_INP14,IN14-Single-Ended
+SH.ADCx_INP14.ConfNb=1
+SH.ADCx_INP15.0=ADC1_INP15,IN15-Single-Ended
+SH.ADCx_INP15.ConfNb=1
+SH.ADCx_INP18.0=ADC1_INP18,IN18-Single-Ended
+SH.ADCx_INP18.ConfNb=1
+SH.ADCx_INP19.0=ADC1_INP19,IN19-Single-Ended
+SH.ADCx_INP19.ConfNb=1
+SH.ADCx_INP3.0=ADC1_INP3,IN3-Single-Ended
+SH.ADCx_INP3.ConfNb=1
+SH.ADCx_INP5.0=ADC1_INP5,IN5-Single-Ended
+SH.ADCx_INP5.ConfNb=1
+SH.ADCx_INP9.0=ADC1_INP9,IN9-Single-Ended
+SH.ADCx_INP9.ConfNb=1
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
