--- a/cansw_altimeter.ioc
+++ b/cansw_altimeter.ioc
@@ -24,8 +24,24 @@ FDCAN1.CalculateTimeBitNominal=4000
 FDCAN1.CalculateTimeQuantumNominal=1333.3333333333333
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler
 FDCAN1.NominalPrescaler=64
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.INCLUDE_xEventGroupSetBitFromISR=1
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configMINIMAL_STACK_SIZE,configENABLE_BACKWARD_COMPATIBILITY,configRECORD_STACK_HIGH_ADDRESS,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configTIMER_TASK_PRIORITY,configUSE_OS2_THREAD_SUSPEND_RESUME,configUSE_OS2_THREAD_ENUMERATE,configUSE_OS2_EVENTFLAGS_FROM_ISR,configUSE_OS2_THREAD_FLAGS,configUSE_OS2_TIMER,configUSE_OS2_MUTEX,INCLUDE_xEventGroupSetBitFromISR
+FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
+FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=0
+FREERTOS.configENABLE_FPU=1
+FREERTOS.configGENERATE_RUN_TIME_STATS=1
+FREERTOS.configMINIMAL_STACK_SIZE=512
+FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
+FREERTOS.configTIMER_TASK_PRIORITY=54
+FREERTOS.configTOTAL_HEAP_SIZE=131072
+FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
+FREERTOS.configUSE_OS2_EVENTFLAGS_FROM_ISR=0
+FREERTOS.configUSE_OS2_MUTEX=0
+FREERTOS.configUSE_OS2_THREAD_ENUMERATE=0
+FREERTOS.configUSE_OS2_THREAD_FLAGS=0
+FREERTOS.configUSE_OS2_THREAD_SUSPEND_RESUME=0
+FREERTOS.configUSE_OS2_TIMER=0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
