Use Timer 1 for SysTick

--- a/cansw_altimeter.ioc
+++ b/cansw_altimeter.ioc
@@ -98,7 +98,7 @@ Mcu.Pin32=PB6
 Mcu.Pin33=PB7
 Mcu.Pin34=VP_FATFS_VS_SDIO
 Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin36=VP_SYS_VS_tim1
 Mcu.Pin37=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC0
@@ -124,7 +124,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM1_UP_IRQn
+NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=ISENSE_BATT
@@ -352,8 +355,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VREF+.Mode=InternalMode
 VREF+.Signal=VREFBUF_OUT
 board=custom
