Reduce FATFS size

--- a/cansw_altimeter.ioc
+++ b/cansw_altimeter.ioc
@@ -19,6 +19,20 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
+FATFS.BSP.number=1
+FATFS.IPParameters=_USE_STRFUNC,_USE_MKFS
+FATFS._USE_MKFS=0
+FATFS._USE_STRFUNC=0
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.api=Unknown
+FATFS0.BSP.component=
+FATFS0.BSP.condition=
+FATFS0.BSP.instance=PD4
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
+FATFS0.BSP.semaphore=
+FATFS0.BSP.solution=PD4
 FDCAN1.CalculateBaudRateNominal=250000
 FDCAN1.CalculateTimeBitNominal=4000
 FDCAN1.CalculateTimeQuantumNominal=1333.3333333333333
