Reduce SD Card operating frequency

--- a/cansw_altimeter.ioc
+++ b/cansw_altimeter.ioc
@@ -345,6 +345,8 @@ RCC.VCO3OutputFreq_Value=144000000
 RCC.VCOInput1Freq_Value=16000000
 RCC.VCOInput2Freq_Value=16000000
 RCC.VCOInput3Freq_Value=16000000
+SDMMC1.ClockDiv=4
+SDMMC1.IPParameters=ClockDiv
 SH.ADCx_INP10.0=ADC3_INP10,IN10-Single-Ended
 SH.ADCx_INP10.ConfNb=1
 SH.ADCx_INP11.0=ADC3_INP11,IN11-Single-Ended
